--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/koa-bodyparser": "5.0.2",
     "@types/koa-router": "7.4.8",
     "@types/node": "20.12.7",
+    "dotenv": "^16.4.5",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
     "koa-router": "12.0.1",
