--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@types/koa-bodyparser": "5.0.2",
     "@types/koa-router": "7.4.8",
     "@types/node": "20.12.7",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
     "koa-router": "12.0.1",
-    "netmask": "^2.0.2",
-    "node-fetch": "^3.3.2"
+    "netmask": "^2.0.2"
   },
   "devDependencies": {
     "@types/netmask": "^2.0.5",
