--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "bot-misskey-gh",
   "main": "./built/index.js",
+  "type": "module",
   "scripts": {
     "start": "node ./built",
     "build": "tsc"
