--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "bot-misskey-gh",
   "main": "./built/index.js",
   "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "start": "node ./built",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node ./src/index.ts",
+    "ins": "tsc && npm run start"
   },
   "dependencies": {
     "@types/koa": "2.15.0",
@@ -12,14 +15,14 @@
     "@types/koa-router": "7.4.8",
     "@types/node": "20.12.7",
     "axios": "^1.6.8",
+    "cidr-matcher": "^2.1.1",
     "dotenv": "^16.4.5",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
-    "koa-router": "12.0.1",
-    "netmask": "^2.0.2"
+    "koa-router": "12.0.1"
   },
   "devDependencies": {
-    "@types/netmask": "^2.0.5",
+    "@types/cidr-matcher": "^2.1.2",
     "@types/request": "2.48.12",
     "ts-node": "10.9.2",
     "typescript": "5.4.5"
